--- a/styles/editor-header.css
+++ b/styles/editor-header.css
@@ -29,7 +29,7 @@
 .editor-header {
     background: #2d2d2d;
     border-bottom: 1px solid #2d2d30;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 0.5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -87,7 +87,7 @@
 .editor-tab.active::after {
     content: '';
     position: absolute;
-    bottom: 0;
+    bottom: -1px;
     left: 0;
     right: 0;
     height: 2px;
